--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
-    "nfcpy>=1.0.4",
+    "pyscard>=2.3.1",
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
@@ -21,6 +21,7 @@ dev = [
     "ruff>=0.5.0",
     "mypy>=1.10.0",
     "ty>=0.0.1a6",
+    "httpx>=0.27.0",
 ]
 
 [tool.ruff]
