--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,11 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
+    
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y pcscd libpcsclite-dev swig
         
     - name: Install uv
       uses: astral-sh/setup-uv@v5
@@ -29,6 +34,7 @@ jobs:
     - name: Create .env file
       run: |
         cp .env.example .env
+        echo "DEBUG_MODE=true" >> .env
         
     - name: Run tests
       run: |
