feat: Lintワークフローでmypyをtyに置き換え、pyproject.tomlにtyの設定を追加

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,6 +39,6 @@ jobs:
       run: |
         uv run black --check src/ tests/
         
-    - name: Run mypy
+    - name: Run ty
       run: |
-        uv run mypy src/ --ignore-missing-imports --show-error-codes --pretty
+        uv run ty check src/
