feat: 環境変数にサーバー設定を追加し、FastAPIアプリでの設定を統合

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ ADMIN_PASSWORD=your_secure_password_here
 
 # デバッグモード（NFCリーダー未接続時にダミーデータで動作確認）
 DEBUG_MODE=false
+
+# サーバー設定
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8000
